fix components properties

--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -14,7 +14,7 @@
       {{ option.name }}
     </button>
   </div>
-  <div *ngIf=!finished class="quizz_results">
+  <div *ngIf=finished class="quizz_results">
     <h1>O seu resultado é:</h1>
     <p>{{ answersSelected }}</p>
   </div>
