--- a/src/app/components/quizz/quizz.component.css
+++ b/src/app/components/quizz/quizz.component.css
@@ -11,7 +11,7 @@
   margin-bottom: 10px;
 }
 
-..quizz_logo img {
+.quizz_logo img {
   width: 100%;
 }
 
@@ -52,7 +52,7 @@
   color: #fff;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
-  padding: 16px 32px;
+  padding: 16px 8px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #2f6627;
   margin-bottom: 20px;
