--- a/src/app/components/quizz/quizz.component.css
+++ b/src/app/components/quizz/quizz.component.css
@@ -8,11 +8,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin-bottom: 10px;
 }
 
 .quizz_logo img {
-  width: 100%;
+  width: 80%;
+  max-width: 400px;
+  margin-top: 24px;
 }
 
 .quizz_logo h3 {
@@ -72,6 +75,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   text-align: center;
   width: 100%;
   height: 350px;
@@ -81,6 +85,6 @@
 }
 
 .quizz_results p {
-  margin-top: 24px;
+  margin: 24px 0;
   font-size: 20px;
 }
